fix(sidebar): correct chevron alignment

--- a/src/sphinx_breeze_theme/assets/styles/components/sidebar-nav.css
+++ b/src/sphinx_breeze_theme/assets/styles/components/sidebar-nav.css
@@ -64,7 +64,7 @@
       position: absolute;
       height: 1.25em;
       width: 1.25em;
-      top: 0.5em;
+      top: 0.375em;
       right: -1.25rem;
       border-radius: calc(var(--bz-border-radius) / 2);
     }
